StrictUnusedVariable supports records